<resources>
    <string name="app_name">GymRoutines</string>
    <string name="example">Example</string>
    <string name="nombre">Nombre</string>
    <string name="descripcion">Descripción</string>
    <string name="ver_todo">Ver todo</string>
    <string name="crea_tu_rutina">Crea tu rutina</string>
    <string name="anyade_un_ejercicio">Añade un ejercicio</string>
    <string name="anyadir_ejercicios">Añadir ejercicios</string>
    <string name="escribe_un_mensaje">Escribe un mensaje</string>
    <string name="enviar">Enviar</string>
    <string name="chat">Chat</string>
    <string name="profile_pic">Profile pic</string>
    <string name="guardar">Guardar</string>
    <string name="borrar_rutina">Borrar rutina</string>
    <string name="editar_rutina">Editar rutina</string>
    <string name="editar_perfil">Editar perfil</string>
    <string name="cerrar_sesion">Cerrar sesión</string>
    <string name="publicar_rutina">Publicar rutina</string>
    <string name="check_imagen">check imagen</string>
    <string name="anyadir_serie">Añadir serie</string>
    <string name="repeticiones_serie">Repeticiones para esta serie</string>
    <string name="duracion">Duración</string>
    <string name="nombre_vacio">Debes añadir nombre a la rutina</string>
    <string name="descripcion_vacia">Debes añadir una descripción</string>
    <string name="ejercicios_vacio">Debe haber al menos un ejercicio</string>
    <string name="duracion_vacia">Debes añadir una duración</string>
    <string name="buscar">Buscar</string>
    <string name="todo_el_cuerpo">Todo el cuerpo</string>
    <string name="cualquier_equipamiento">Cualquier equipamiento</string>
    <string name="todos_los_niveles">Todos los niveles</string>
    <string name="nombre_de_usuario">Nombre de usuario</string>
    <string name="cancelar">Cancelar</string>
    <string name="inicio_sesion">Inicio sesión</string>
    <string name="correo_electronico">Correo electrónico</string>
    <string name="contrasenya">Contraseña</string>
    <string name="iniciar_sesion">Iniciar sesión</string>
    <string name="registrarse">Registrarse</string>
    <string name="imagen_de_la_rutina">Imagen de la rutina</string>
    <string name="registro">Registro</string>
    <string name="confirmar_contrasenya">Confirmar contraseña</string>
    <string name="maquina">Máquina</string>
    <string name="facil">Fácil</string>
    <string name="mi_rutina">Mi rutina</string>
    <string name="info_rutina">Lose weight · 3 days · 12 exercises</string>
    <string name="creadas_por_mi">Creadas por mí</string>
    <string name="nombre_usuario_ejemplo">Mariano</string>
    <string name="mensaje_ejemplo">Buenos días. Acabo de empezar a entrenar.</string>
    <string name="info_ejercicio">Sin equipamiento. Abdominales</string>
    <string name="ejercicio_ejemplo">Crunch</string>
    <string name="series_ejemplo">12x 10x 8x</string>
    <string name="flecha_atras">flecha atrás</string>
    <string name="icono_editar">icono editar</string>
</resources>