<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="#F8F3ED">

    <TextView
        android:id="@+id/tvChat"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:background="#212529"
        android:textColor="#F8F3ED"
        android:textStyle="bold"
        android:textSize="20sp"
        android:padding="10dp"
        android:text="@string/chat"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/chatRecyclerView"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginVertical="10dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@id/tvChat"
        app:layout_constraintBottom_toTopOf="@id/messageLinearLayout"
        tools:listitem="@layout/chat_item" />

    <LinearLayout
        android:id="@+id/messageLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:paddingHorizontal="10dp">

        <EditText
            android:id="@+id/EtextMessage"
            android:inputType="text"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:hint="@string/escribe_un_mensaje" />

        <Button
            android:id="@+id/btnSend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="@string/enviar"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:cornerRadius="20dp" />
    </LinearLayout>
</LinearLayout>