<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#212529"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:id="@+id/tvTitles"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/crea_tu_rutina"
            android:textColor="#F8F3ED"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnGuardar"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="10dp"
            android:gravity="end"
            android:text="@string/guardar"
            android:textAllCaps="false"
            app:cornerRadius="20dp" />
    </LinearLayout>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="28dp"
        android:paddingVertical="14dp">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:fitsSystemWindows="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textNombreRutina"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:hint="Nombre de la rutina"
                android:textSize="14sp" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textDescripcionRutina"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Descripción de la rutina"
                android:textSize="14sp" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="6dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvDuracion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/duracion" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textDuracion"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:inputType="number" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="m." />

                <Switch
                    android:id="@+id/switchPublishRoutine"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/publicar_rutina" />
            </androidx.appcompat.widget.LinearLayoutCompat>
        </com.google.android.material.appbar.AppBarLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvRoutineExercises"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/btnAddExercise"
                android:layout_alignParentTop="true"
                android:paddingTop="10dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/routine_exercise_item" />

            <Button
                android:id="@+id/btnAddExercise"
                android:layout_width="210dp"
                android:layout_height="45dp"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:text="@string/anyade_un_ejercicio"
                android:textAllCaps="false"
                android:textSize="14sp"
                app:cornerRadius="20dp" />
        </RelativeLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</androidx.appcompat.widget.LinearLayoutCompat>